tests/neg-custom-args/captures/boxmap.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/boxmap.scala:15:2 ----------------------------------------
15 |  () => b[Box[B]]((x: A) => box(f(x)))  // error
   |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |  Found:    {f} {b} () => Box[B]
   |  Required: {B} () => Box[B]
   |
   |  where:    B is a type in method lazymap with bounds <: Top

longer explanation available when compiling with `-explain`
